2025-05-10T00:52:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14940186989 # 639
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-10
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 527 920 / 538 931
* notice: next accum: outdated-unq outdated-all / unq all: 528 921 / 539 932
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-25] / [2025-05-09]

2025-05-09T00:54:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14919061777 # 638
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-09
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 526 919 / 537 930
* notice: next accum: outdated-unq outdated-all / unq all: 527 920 / 538 931
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-24] / [2025-05-08]

2025-05-08T00:55:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14896245257 # 637
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-08
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 525 918 / 536 929
* notice: next accum: outdated-unq outdated-all / unq all: 526 919 / 537 930
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-23] / [2025-05-07]

2025-05-06T00:54:35Z: