@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-10T00:52:27Z",
+  "timestamp" : "2025-05-11T00:58:37Z",
   "count_outdated" : 921,
   "uniques_outdated" : 528,
-  "count" : 932,
-  "uniques" : 539,
+  "count" : 933,
+  "uniques" : 540,
   "clones" : [
     {
       "timestamp": "2025-04-27T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2025-05-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
