@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 2,
   "clones": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2025-05-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-10T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
