@@ -1,3 +1,12 @@
+2025-05-11T00:58:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14950759910 # 640
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-11
+* notice: last 14d: unq all: 2 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 528 921 / 539 932
+* notice: next accum: outdated-unq outdated-all / unq all: 528 921 / 540 933
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-05-10]
+
 2025-05-10T00:52:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14940186989 # 639
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-10
